[tool.poetry]
name = "hello-spoken-dialogue-system"
version = "0.1.0"
description = ""
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
speechrecognition = "^3.10.4"
gtts = "^2.5.1"
pyaudio = "^0.2.14"
mpyg321 = "^2.2.0"
pyttsx3 = "^2.90"
pyobjc = "^10.2"
gtts-token = "^1.1.4"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
